<resources>
    <string name="app_name">SmartArt-Android</string>
    <string name="login_welcome">Welcome to the SmartArt companion app</string>
    <string name="login_prompt">Please login to continue</string>
    <string name="login_button">Login</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="email_hint">Enter email</string>
    <string name="password_hint">Enter password</string>
    <string name="action_settings">Settings</string>
    <string name="login_unsuccessful">Login Unsuccessful</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="posting_hint">Enter Posting ID to Get Name</string>
    <string name="posting_button">Get Posting Name</string>
    <string name="viewpostings_button">View Postings</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>